<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secrets</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Enter password:</string>
    <string name="passwordAlertDialog">Authentication</string>
    <string name="action_add">Add Secret</string>
    <string name="action_edit">Edit Secret</string>
    <string name="action_delete">Delete Secret(s)</string>
    <string name="title_activity_save_edit">SaveEditActivity</string>
    <string name="secret">Enter secret:</string>
    <string name="saveEditDialog">Enter your secret:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete_dialog_message">Are you sure you wish to delete the item(s)?</string>
    <string name="delete_dialog_ok">Yes</string>
    <string name="delete_dialog_cancel">No</string>
    <string name="delete_dialog_title">Warning!</string>
    <string name="action_import_export">Import / Export</string>
    <string name="title_activity_import_export">ImportExport</string>

</resources>
