<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always"
        android:title="@string/action_add" />
    
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always"
        android:enabled="false"
        android:title="@string/action_edit" />
    
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="always"
        android:enabled="false"
        android:title="@string/action_delete" />
    
     <item
        android:id="@+id/action_import_export"
        android:icon="@drawable/ic_action_import_export"
        android:showAsAction="always"
        android:enabled="true"
        android:title="@string/action_import_export" />

</menu>
